# payments-engine

./: Cargo.toml  README.md
data/: transactions_1.csv  transactions_2.csv  transactions_3.csv  transactions_4.csv
src/: account.rs  error.rs  main.rs  payments.rs  storage.rs
