[package]
name = "payments-engine"
version = "0.1.0"
authors = ["Iulian Barbu <iulianbarbu2@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.8", features = ["derive"] }
crypto-bigint = "0.5.5"
csv-async = { version = "1.3.0", features = ["tokio"] }
futures = "0.3.30"
serde = { version = "1.0.203", features = ["derive"] }
thiserror = "1.0.61"
tokio = { version = "1.38.*", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.2.0"
